addeded more to meta tags

--- a/W1/D1/P1.html
+++ b/W1/D1/P1.html
@@ -3,7 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name=""description" content="width=device-width, initial-scale=1.0">
+    <meta nme=""description content="This is page description">
+    <meta name="author" content="rakshitha"/>
+    < -- Open Graphs: facebook, linkdein & twitter/x -->
+    <meta property="og.title" content="HTML Meta tags example/">
+    <meta property="og."description" content="This page demonstrates HTML tags usage"/>
+    <meta property="og.type" content="website"/>
+    
+"
     <title>Document</title>
+    <meta property="og:url"
 </head>
 <body>
     
