--- a/W1/D1/P2.html
+++ b/W1/D1/P2.html
@@ -8,9 +8,11 @@
 <body>
     <h1>Heading 1</h1>
     <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
+    <h3>Heading 3</h3> <br> <hr>
+    <code>&lt;h4&gt</code>
     <h4>Heading 4</h4>
     <h5>Heading 5</h5>
     <h6>Heading 6</h6>
+    
 </body>
 </html>
