Adding Images tags

--- a/W1/D1/P1.html
+++ b/W1/D1/P1.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name=""description" content="width=device-width, initial-scale=1.0">
-    <meta nme=""description content="This is page description">
-    <meta name="author" content="rakshitha"/>
+    <meta name="" description " content="width=device-width, initial-scale=1.0 ">
+    <meta nme=" "description content="This is page description ">
+    <meta name="author " content="rakshitha "/>
     < -- Open Graphs: facebook, linkdein & twitter/x -->
-    <meta property="og.title" content="HTML Meta tags example/">
-    <meta property="og."description" content="This page demonstrates HTML tags usage"/>
-    <meta property="og.type" content="website"/>
-    
-"
-    <title>Document</title>
-    <meta property="og:url"
+    <meta property="og:title " content="HTML Meta tags example/ ">
+    <meta property="og: "description" content="This page demonstrates HTML tags usage" />
+    <meta property="og:type " content="website " />
+    <meta property="og " <title>Document</title>
+    <meta property="og:url" content="https://google.com" />
+    <meta property="og:image" content="image.jpeg" />
+    < title> my title</title>
+        <meta name="twitter:card" content="sumarry of the card" />
+        < meta name="twitter.title" content="Html Meta  tags example">
+
 </head>
+
 <body>
-    
-</body>
+    <p>Example of met tags</p>
+    <</body>
+
 </html>
