--- a/p4.html
+++ b/p4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Text formating</title>
+    <title>Text formating added</title>
 </head>
 <body> 
     <p>this is <strong>Bold text</strong><del> deleted text</del><em>italic font</em></p>
