--- a/W1/D3/p2.html
+++ b/W1/D3/p2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML Tables</title>
 </head>
 
 <body>
@@ -16,12 +16,50 @@
             Score of Students
         </caption>
         <col span="1">
-        <col span=</body>
+        <col span="3" v</colgroup>
+        <thead>
+            <tr>
+                <th rowspan="2">Name</th>
+                <th colspan="2">Subjects</th>
+                <th rowspan="2">Total Marks</th>
+            </tr>
+            <tr>
+                <th>Math</th>
+                <th>Science</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Anju</td>
+                <td>88</td>
+                <td>80</td>
+                <td>168</td>
+            </tr>
+            <tr>
+                <td>Ananya</td>
+                <td>81</td>
+                <td>80</td>
+                <td>161</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="3">Avg.Score</td>
+                <td>160</td>
+            </tr>
+        </tfoot>
+    </table>
+</body>
+
+</html>
+</body>
 
 </html>
 
 <body>
 
 </body>
+
+</html>
 
 </html>
