video and audio embedding

--- a/W1/D3/p3.html
+++ b/W1/D3/p3.html
@@ -4,22 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Tables</title>
+    <title>Video and embedding</title>
 </head>
 
 <body>
     <!-- Learning about video and audio tags -->
     <h3>Video & Audio tag usage</h3>
-    <video width="640" height="360 
-    <video controls>
-         <source src=" html.mp4 "type="video/mp4 ">
+    <video width="640" height="360 " controls>
+         <source src=" html.mp4 " type="video/mp4 ">
+         no vedio link found
         </video>
-        <video controls>
-         <source src=" html.mp4 "type="audio/mp4 ">
+    <video controls>
+         <source src=" html.mp3 "type="audio/mpeg ">
+         no audio link found
         </audio>
         </video>
-    </body>
-    
-    
+</body>
+
+
 
 </html>
