--- a/W1/D1/P1.html
+++ b/W1/D1/P1.html
@@ -14,7 +14,7 @@
     <meta property="og " <title>Document</title>
     <meta property="og:url" content="https://google.com" />
     <meta property="og:image" content="image.jpeg" />
-    < title> my title</title>
+    < title> My title</title>
         <meta name="twitter:card" content="sumarry of the card" />
         < meta name="twitter.title" content="Html Meta  tags example">
 
