--- a/W1/D1/p3.html
+++ b/W1/D1/p3.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>semantic elements</title>
+    <title>Semantic elements</title>
 </head>
+
 <body>
     <header>
         <h1>My Blog</h1>
@@ -23,10 +25,11 @@
     <aside>
         <h4>sidebar</h4>
         <p>some sidebar things go here.</p>
-        </aside>
-        <footer>
-            <p>&copy; 2026. Agastya Edtech. All rights are reserved.</p>
-        </footer>
+    </aside>
+    <footer>
+        <p>&copy; 2026. Agastya Edtech. All rights are reserved.</p>
+    </footer>
     </aside>
 </body>
+
 </html>
