--- a/W1/D1/p4.html
+++ b/W1/D1/p4.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Text formating added</title>
 </head>
-<body> 
+
+<body>
     <p>this is <strong>Bold text</strong><del> deleted text</del><em>italic font</em></p>
-    <p> This is n example for <pre>                         tag.</pre></p>
+    <p> This is a example for <pre>                         tag.</pre></p>
 </body>
+
 </html>
