--- a/W1/D1/P1.html
+++ b/W1/D1/P1.html
@@ -4,24 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="" description " content="width=device-width, initial-scale=1.0 ">
-    <meta nme=" "description content="This is page description ">
-    <meta name="author " content="rakshitha "/>
-    < -- Open Graphs: facebook, linkdein & twitter/x -->
+    <meta name="description " content="This is page description " />
+    <meta name="author " content="rakshitha " />
+    <!-- Open Graphs: facebook, linkdein & twitter/x -->
     <meta property="og:title " content="HTML Meta tags example/ ">
-    <meta property="og: "description" content="This page demonstrates HTML tags usage" />
+    <meta property="og:description " content="This page demonstrates HTML tags usage " />
     <meta property="og:type " content="website " />
-    <meta property="og " <title>Document</title>
-    <meta property="og:url" content="https://google.com" />
-    <meta property="og:image" content="image.jpeg" />
-    < title> My title</title>
-        <meta name="twitter:card" content="sumarry of the card" />
-        < meta name="twitter.title" content="Html Meta  tags example">
+    <meta property="og:url " content="https://google.com " />
+    <meta property="og:image " content="image.jpeg " />
+    <title> My title</title>
+    <meta name="twitter:card " content="sumarry of the card " />
+    <meta name="twitter.title " content="Html Meta tags example " />
 
 </head>
 
 <body>
-    <p>Example of met tags</p>
-    <</body>
-
-</html>
+    <p>Example of meta tags</p>
+</body>
