--- a/W1/D3/p9.html
+++ b/W1/D3/p9.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title Child and Decendent selector</title>
+    <title>title Child and Decendent selector</title>
     <style>
         /* Child Selectors*/
         
