Positioning elements: static

--- a/W1/D5/P1.html
+++ b/W1/D5/P1.html
@@ -14,13 +14,13 @@
         }
 
         body {
-            background: #f4f6f9;
-            color: #333;
+            background: white;
+            color: black;
             line-height: 1.6;
         }
 
         header {
-            background: #0d6efd;
+            background: green;
             padding: 15px 50px;
         }
 
@@ -198,7 +198,7 @@
 
 <section id="home" class="hero">
     <h1>Rakshitha Y N</h1>
-    <img src="myphoto.jpg" alt="Profile Photo" class="profile-img" width="130">
+    <img src="myphoto.jpeg" alt="Profile Photo" class="profile-img" width="130">
     <p><strong>Full Stack Developer | MERN Stack | DevOps Enthusiast</strong></p>
     <p>Computer Science Engineering Graduate from Mandya, Karnataka</p>
     <a href="#contact" class="cta-button">Contact Me</a>
